提交 整个项目结构到dev 分支上 2017-12-14 17:50

--- a/microservice-discovery-eureka-ha/src/main/resources/application.yml
+++ b/microservice-discovery-eureka-ha/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   application:
     name: microservice-discovery-eureka-ha
----
+---  #使用边字符（---）将该application.yml 文件分为三段，第二段和第三段分别为spring.properties 指定了一个值，该值表示它所在的那段内容应用在那个Profile 里。
 spring:
   profiles: peer1                                 # 指定profile=peer1
 server:
