--- a/microservice-consumer-movie-ribbon/pom.xml
+++ b/microservice-consumer-movie-ribbon/pom.xml
@@ -33,6 +33,10 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-eureka</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-ribbon</artifactId>
+    </dependency>
   </dependencies>
 
   <!-- 引入spring cloud的依赖 -->
