--- a/microservice-discovery-eureka-authenticating/src/main/resources/application.yml
+++ b/microservice-discovery-eureka-authenticating/src/main/resources/application.yml
@@ -2,8 +2,8 @@ security:
   basic:
     enabled: true               # 开启基于HTTP basic的认证
   user:
-    name: user                  # 配置登录的账号是user
-    password: password123       # 配置登录的密码是password123
+    name: hgx                  # 配置登录的账号是user
+    password: 123       # 配置登录的密码是password123
 server:
   port: 8761                    # 指定该Eureka实例的端口
 eureka:
