提交 整个项目结构到dev 分支上 2017-12-14 17:50

--- a/microservice-config-server/src/main/resources/application.yml
+++ b/microservice-config-server/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
     config:
       server:
         git:
-          uri: https://git.oschina.net/itmuch/spring-cloud-config-repo      # 配置Git仓库的地址
-          username:                                                         # Git仓库的账号
-          password:                                                         # Git仓库的密码
+          uri: https://gitee.com/hgx615/spring-cloud-config-repo      # 配置Git仓库的地址
+          username: hgx615@126.com                                    # Git仓库的账号
+          password: 123456                                        # Git仓库的密码
